hphp/hack/test/typecheck/reactive/rx_class1.php.exp
File "rx_class1.php", line 3, characters 3-5:
Reactive annotations are not allowed on classes, interfaces or traits. (Parsing[1002])
